20250502_daily_arXiv_update

--- a/arxiv/2025_04_arxiv.html
+++ b/arxiv/2025_04_arxiv.html
@@ -204,6 +204,36 @@
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17437">https://arxiv.org/abs/2504.17437</a></span> Lectures on measurement in quantum field theory</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17488">https://arxiv.org/abs/2504.17488</a></span> MICROSCOPIC DERIVATION OF THE STATIONARY CHERN–SIMONS–SCHRÖDINGER EQUATION FOR ALMOST-BOSONIC ANYONS</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17686">https://arxiv.org/abs/2504.17686</a></span> Metal-insulator transitions in pyrochlore oxides</p>
+<br>
+<p class="p1">20250428</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.18137">https://arxiv.org/abs/2504.18137</a></span> Higher-order topological corner states and edge states in grid-like frames</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.17851">https://arxiv.org/abs/2504.17851</a></span> Equivalence of effective actions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07792">https://arxiv.org/abs/2501.07792</a></span> Hall Angle of a Spatially Random Vector Model (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.17845">https://arxiv.org/abs/2504.17845</a></span> η-pairing state in flatband lattice: Interband coupling effect on entanglement entropy logarithm (Seik Pak, Hanbyul Kim, Chan Bin Bark, Sang-Jin Sin, Jae-yoon Choi, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.17893">https://arxiv.org/abs/2504.17893</a></span> Eliashberg theory prediction of critical currents in superconducting thin films under DC electric fields</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.18126">https://arxiv.org/abs/2504.18126</a></span> Lecture Notes on Normalizing Flows for Lattice Quantum Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.16978">https://arxiv.org/abs/2504.16978</a></span> Scientific Spirit of Chien-Shiung Wu: From Quantum Entanglement to Parity Nonconservation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.16131">https://arxiv.org/abs/2504.16131</a></span> Introduction to Quantum Machine Learning and Quantum Architecture Search</p>
+<p class="p2"><br></p>
+<p class="p1">20250429</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.18885">https://arxiv.org/abs/2504.18885</a></span> Planar Nernst effect from hidden band geometry in layered two-dimensional materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.19310">https://arxiv.org/abs/2504.19310</a></span> Fluctuation-induced first-order superfluid transition in unitary SU(N) Fermi gases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.18703">https://arxiv.org/abs/2504.18703</a></span> Realizing supersymmetry in a digitized quantum device</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.18778">https://arxiv.org/abs/2504.18778</a></span> Three-Dimensional Fermi Surface, Van Hove Singularity and Enhancement of Superconductivity in Infinite-Layer Nickelates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.19686">https://arxiv.org/abs/2504.19686</a></span> Four-Fermion Deformations on Line Defects in QED4 with Yukawas</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.19321">https://arxiv.org/abs/2504.19321</a></span> Charge and pair density waves in a spin and valley-polarized system at a Van-Hove singularity (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.19512">https://arxiv.org/abs/2504.19512</a></span> Gapped Boundaries of Kitaev’s Quantum Double Models: A Lattice Realization of Anyon Condensation from Lagrangian Algebras</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12521">https://arxiv.org/abs/2504.12521</a></span> Lectures on the Bondi–Metzner–Sachs Group and related topics in infrared physics</p>
+<p class="p2"><br></p>
+<p class="p1">20250430</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.20153">https://arxiv.org/abs/2504.20153</a></span> Gyrotropic magnetic effect in metallic chiral magnets ***** (Nisarga Paul, Takamori Park, Jung Hoon Han, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.20743">https://arxiv.org/abs/2504.20743</a></span> Nonsymmorphic Topological Phases of Non-Hermitian Systems (Ken Shiozaki, Kohei Kawabata)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.20150">https://arxiv.org/abs/2504.20150</a></span> Shot-noise in strongly-correlated double quantum spin Hall edges (Andreas Tsantilas, Trithep Devakul, Julian May-Mann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.20151">https://arxiv.org/abs/2504.20151</a></span> N-ality symmetry and SPT phases in (1+1)d</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.20140">https://arxiv.org/abs/2504.20140</a></span> Multi-Band Exact Diagonalization and an Iteration Approach to Hunt For Fractional ChernInsulators in Rhombohedral Multilayer Graphene (Heqiu Li, B. Andrei Bernevig, Nicolas Regnault)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2504.20945">https://arxiv.org/abs/2504.20945</a><span class="s2"> There is no boundary problem</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.19097">https://arxiv.org/abs/2504.19097</a></span> Yang-Mills flows for multilayered graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12543">https://arxiv.org/abs/2011.12543</a></span> Higher-form symmetry breaking at Ising transitions (Meng Cheng, Zi Yang Meng)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
