20250530_daily_arXiv_update

--- a/arxiv/2025_05_arxiv.html
+++ b/arxiv/2025_05_arxiv.html
@@ -165,6 +165,92 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.05976">https://arxiv.org/abs/2306.05976</a></span> Scattering Amplitudes in Quantum Field Theory *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.09750">https://arxiv.org/abs/2505.09750</a></span> Chern-Simons Theory, Holography and Topological Strings (Cumrun Vafa)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.10163">https://arxiv.org/abs/2505.10163</a></span> Gravitational Core of Double Field Theory —LECTURE NOTES— *****</p>
+<br>
+<p class="p1">20250519</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.10773">https://arxiv.org/abs/2505.10773</a></span> Sequential topology: iterative topological phase transitions in finite chiral structures</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.10345">https://arxiv.org/abs/2505.10345</a></span> Phonon Edelstein eﬀect in chiral metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11377">https://arxiv.org/abs/2505.11377</a></span> TensorMixedStates: A Julia library for simulating pure and mixed quantum states using matrix product states</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11501">https://arxiv.org/abs/2505.11501</a></span> Exactly solvable dissipative dynamics and one-form strong-to-weak spontaneous symmetry breaking in interacting two-dimensional spin systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11419">https://arxiv.org/abs/2505.11419</a></span> Lattice models with subsystem/weak non-invertible symmetry-protected topological order</p>
+<p class="p2"><br></p>
+<p class="p1">20250520</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12724">https://arxiv.org/abs/2505.12724</a></span> Josephson Junctions in the Age of Quantum Discovery ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12819">https://arxiv.org/abs/2505.12819</a></span> Theory of charge-to-spin conversion under quantum confinement</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12675">https://arxiv.org/abs/2505.12675</a></span> From Quantum Indistinguishability to Classical Distinguishability: Statistics and Measurement of Two-Particle Distributions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12595">https://arxiv.org/abs/2505.12595</a></span> Driven Critical Dynamics in Tricitical Point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12979">https://arxiv.org/abs/2505.12979</a></span> Tricritical Kibble–Zurek Scaling in Rydberg Atom Ladders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11630">https://arxiv.org/abs/2505.11630</a></span> Revisiting vestigial order in nematic superconduc- tors: gauge-field mechanisms and model constraints</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.13200">https://arxiv.org/abs/2505.13200</a></span> Quantum Kinetic Uncertainty Relations in Mesoscopic Conductors at Strong Coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11727">https://arxiv.org/abs/2505.11727</a></span> Pseudogap in electron-doped cuprates: thermal precursor to magnetism (A. V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.12498">https://arxiv.org/abs/2505.12498</a></span> New Collective Modes in Weyl Superconductors</p>
+<p class="p2"><br></p>
+<p class="p1">20250521</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.13712">https://arxiv.org/abs/2505.13712</a></span> A new scale anomaly in Dirac matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.13592">https://arxiv.org/abs/2505.13592</a></span> Magnetised Bounds for Conformal Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.14397">https://arxiv.org/abs/2505.14397</a></span> On entanglement c-functions in confining gauge field theories</p>
+<p class="p2"><br></p>
+<p class="p1">20250522</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.14767">https://arxiv.org/abs/2505.14767</a></span> Ordering the topological order in the fractional quantum Hall effect ***** (Meng Cheng, Seth Musser, Amir Raz, Nathan Seiberg, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.15609">https://arxiv.org/abs/2505.15609</a></span> Uhlmann and scalar Wilczek-Zee phases of degenerate quantum systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.11174">https://arxiv.org/abs/2505.11174</a></span> Electric-Magnetic Duality for Symmetric Tensor Gauge Theories and Immobile p-branes ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.15343">https://arxiv.org/abs/2505.15343</a></span> Subgap pumping of antiferromagnetic Mott insulators: photoexcitation mechanisms and applications (Eugene Demler)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2505.15485">https://arxiv.org/abs/2505.15485</a><span class="s2"> φ3 THEORY AT SIX LOOPS</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.14807">https://arxiv.org/abs/2505.14807</a></span> (−1)-Form Symmetries and Anomaly Shifting from SymTFT</p>
+<p class="p2"><br></p>
+<p class="p1">20250523</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.15891">https://arxiv.org/abs/2505.15891</a></span> Gaplessness from disorder and quantum geometry in gapped superconductors ***** (Omri Lesser, Sagnik Banerjee, Xuepeng Wang, Jaewon Kim, Altman, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.16999">https://arxiv.org/abs/2505.16999</a></span> Nonlinear thermal and thermoelectric transport from quantum geometry (Shouvik Sur, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.17009">https://arxiv.org/abs/2505.17009</a></span> Topological Phases, Criticality, and Mixed State Order in a Hubbard Quantum Simulator (Lin Su, Rahul Sahay, Michal Szurek, Alexander Douglas, Ognjen Markovi ́c, Ceren B. Dag, Ruben Verresen, Markus Greiner)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.16600">https://arxiv.org/abs/2505.16600</a></span> Major issues in theory of Bose-Einstein condensation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.15889">https://arxiv.org/abs/2505.15889</a></span> Strong Hilbert space fragmentation and fractons from subsystem and higher-form symmetries (Charles Stahl, Oliver Hart, Alexey Khudorozhkov, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.16546">https://arxiv.org/abs/2505.16546</a></span> Twisted Partition Functions as Order Parameters</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.16930">https://arxiv.org/abs/2505.16930</a></span> Lorentz-violating QED inspired superconductivity</p>
+<p class="p2"><br></p>
+<p class="p1">20250526</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18143">https://arxiv.org/abs/2505.18143</a></span> Statistical Localization in a Rydberg Simulator of U (1) Lattice Gauge Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.17200">https://arxiv.org/abs/2505.17200</a></span> Resolving Intervalley Gaps and Many-Body Resonances in Moir’e Superconductor (Haoyu Hu, Andrea F. Young, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.15521">https://arxiv.org/abs/2505.15521</a></span> Prethermalization, shadowing breakdown, and the absence of Trotterization transition in quantum circuits</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.17081">https://arxiv.org/abs/2505.17081</a></span> Lieb-Mattis ordering theorem of electronic energy levels in the thermodynamic limit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18119">https://arxiv.org/abs/2505.18119</a></span> Higher-order topological phases protected by non-invertible and subsystem symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18124">https://arxiv.org/abs/2505.18124</a></span> Multiparty entanglement loops in quantum spin liquids (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.17164">https://arxiv.org/abs/2505.17164</a></span> A pedagogical approach to the black hole information problem</p>
+<p class="p2"><br></p>
+<p class="p1">20250527</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.19636">https://arxiv.org/abs/2505.19636</a></span> Longitudinal magnetoconductivity in chiral multifold semimetals exemplified by pseudospin-1 nodal points (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18265">https://arxiv.org/abs/2505.18265</a></span> Non-Clifford gates between stabilizer codes via non-Abelian topological order</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18250">https://arxiv.org/abs/2505.18250</a></span> Quantum Spin Liquids in Pyrochlore Magnets With Non-Kramers Local Moments *** (Tony An, F´elix Desrochers, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.19011">https://arxiv.org/abs/2505.19011</a></span> Fermi-liquid transport beyond the upper critical field in superconducting La2PrNi2O7 thin films (Harold Y. Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18957">https://arxiv.org/abs/2505.18957</a></span> The universality class of the first levels in low-dimensional gravity (Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.00694">https://arxiv.org/abs/2505.00694</a></span> What is the Hierarchy Problem? ***** (Michael E. Peskin)</p>
+<p class="p2"><span class="Apple-converted-space"> </span></p>
+<p class="p1">20250528</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20406">https://arxiv.org/abs/2505.20406</a></span> Leveraging recurrence in neural network wavefunctions for large-scale simulations of Heisenberg antiferromagnets: the triangular lattice (Roger G. Melko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20472">https://arxiv.org/abs/2505.20472</a></span> From Chern to Winding: Topological Invariant Correspondence in the Reduced Haldane Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20387">https://arxiv.org/abs/2505.20387</a></span> Observation of hadron scattering in a lattice gauge theory on a quantum computer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20398">https://arxiv.org/abs/2505.20398</a></span> Quantized Transport of Disordered Superconducting ν = 2/3 Fractional Quantum Hall Edges (Pok Man Tam, Hao Chen, Biao Lian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20419">https://arxiv.org/abs/2505.20419</a></span> Ginsparg-Wilson Hamiltonians with Improved Chiral Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20436">https://arxiv.org/abs/2505.20436</a></span> Constraints on the symmetric mass generation paradigm for lattice chiral gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20384">https://arxiv.org/abs/2505.20384</a></span> Generalized Hall Conductivities in Local Commuting Projector Models: Generalized Symmetries and Protected Surface Modes (Po-Shen Hsin, Ryohei Kobayashi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20907">https://arxiv.org/abs/2505.20907</a></span> Odd-parity magnetism by quantum geometry (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20684">https://arxiv.org/abs/2505.20684</a></span> Integrable Non-Holonomic Constraints and Gauge Fixing in Classical Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.20408">https://arxiv.org/abs/2505.20408</a></span> Quantum computation of hadron scattering in a lattice gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.18820">https://arxiv.org/abs/2505.18820</a></span> Momentum space entanglement of four fermion field theory</p>
+<p class="p2"><br></p>
+<p class="p1">20250529</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.21616">https://arxiv.org/abs/2505.21616</a></span> Family of Multilayer Graphene Superconductors with Tunable Chirality: Momentum-Space Vortices Forged in the Berry-Ring of Fire (Adarsh S. Patri, Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.22122">https://arxiv.org/abs/2505.22122</a></span> Effective potential and scattering length of shielding polar molecules</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.21921">https://arxiv.org/abs/2505.21921</a></span> Exact Quantum Many-Body Scars in 2D Quantum Gauge Models (Hosho Katsura)</p>
+<p class="p2"><br></p>
+<p class="p1">20250530</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.22720">https://arxiv.org/abs/2505.22720</a></span> Flow to Nishimori universality in weakly monitored quantum circuits with qubit loss (Andreas W.W. Ludwig, Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.22723">https://arxiv.org/abs/2505.22723</a></span> Quantum multicriticality and emergent symmetry in Dirac systems with two order parameters at three-loop order ***** (Max Uetrecht, Igor F. Herbut, Michael M. Scherer, Emmanuel Stamou, Tom Steudtner)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.23388">https://arxiv.org/abs/2505.23388</a></span> Condensates, Crystals, and Renormalons in the Gross–Neveu Model at Finite Density</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.22725">https://arxiv.org/abs/2505.22725</a></span> Kekul´e order from diffuse nesting near higher-order Van Hove points ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.23282">https://arxiv.org/abs/2505.23282</a></span> Tuning the Chern number of Kitaev quantum spin liquid (Seong Jun Kwon, Kyusung Hwang, Suk Bum Chung)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.23699">https://arxiv.org/abs/2505.23699</a></span> Dyn-HTE: High-temperature expansion of the dynamic Matsubara spin correlator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.14288">https://arxiv.org/abs/2408.14288</a></span> Dirac points and topological phases in correlated altermagnets *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.22794">https://arxiv.org/abs/2505.22794</a></span> Timelike Quantum Energy Teleportation in the Nambu–Jona-Lasinio Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2505.23639">https://arxiv.org/abs/2505.23639</a></span> The Multiverse: a Philosophical Introduction *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
