20250608_daily_arXiv_update

--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -44,6 +44,66 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20250602</p>
+<p class="p2"><a href="https://arxiv.org/pdf/2505.24432">https://arxiv.org/pdf/2505.24432</a><span class="s1"> 50 years of spin glass theory</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.23853">https://arxiv.org/pdf/2505.23853</a></span> Roughening and dynamics of an electric flux string in a (2+1)D lattice gauge theory</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2503.07750">https://arxiv.org/pdf/2503.07750</a></span> BCS-like formula for Tc does not necessarily imply BCS pairing mechanism *** (Yuxuan Wang, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.24130">https://arxiv.org/pdf/2505.24130</a></span> Instantons and topological order in two-leg electron ladders: A universality class</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.24777">https://arxiv.org/pdf/2505.24777</a></span> Emergent boundary supersymmetry in a one dimensional superconductor **** (Natan Andrei)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.24847">https://arxiv.org/pdf/2505.24847</a></span> Nematicity in iron pnictides: phase competition and emergent symmetry *** (Qimiao Si)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.23909">https://arxiv.org/pdf/2505.23909</a></span> Fully Generalized Spin Models with Strain Effects of Kitaev Spin Liquid Candidate Materials **** (Pureum Noh, Hyunggeun Lee, Myung Joon Han, Eun-Gook Moon)</p>
+<p class="p3"><br></p>
+<p class="p1">20250603</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00198">https://arxiv.org/pdf/2506.00198</a></span> MOFGPT: Generative Design of Metal-Organic Frameworks using Language Models</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00650">https://arxiv.org/pdf/2506.00650</a></span> Coherent error induced phase transition</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.01131">https://arxiv.org/pdf/2506.01131</a></span> Analogs of deconfined quantum criticality for non-invertible symmetry breaking in 1d (Yu-Hsueh Chen, Tarun Grover)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00804">https://arxiv.org/pdf/2506.00804</a></span> New universality classes and BKT transition in the vortex lattice phases of Kagome Ice</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.01764">https://arxiv.org/pdf/2506.01764</a></span> Unconventional Superconducting Pairing Symmetries in La3Ni2O7: from the Perspective of Topology</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00110">https://arxiv.org/pdf/2506.00110</a></span> Holon metal, charge-density-wave and chiral superconductor from doping fractional Chern insulator and SU(3)1 chiral spin liquid **** (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00114">https://arxiv.org/pdf/2506.00114</a></span> Symmetry-deformed toric codes and the quantum dimer model (Simon Trebst)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00126">https://arxiv.org/pdf/2506.00126</a></span> Absence of topological order in the U(1) checkerboard toric code</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.00248">https://arxiv.org/pdf/2506.00248</a></span> A higher dimensional generalization of the Kitaev spin liquid (Piers Coleman)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.01894">https://arxiv.org/pdf/2506.01894</a></span> Enhancing van-Hove singularities in SrRuO3 films by vacancy engineerings (Moon Hyoung Lee, Hyungwoo Lee, Jun-Won Rhim)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2408.12265">https://arxiv.org/pdf/2408.12265</a></span> Classifying Entanglement by Algebraic Geometry</p>
+<p class="p3"><br></p>
+<p class="p1">20250604</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.02113">https://arxiv.org/pdf/2506.02113</a></span> Classical spin liquids from frustrated Ising models in hyperbolic space **** (Matthias Vojta)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03146">https://arxiv.org/pdf/2506.03146</a></span> Topology meets symmetry breaking: Hidden order, intrinsically gapless topological states and finite-temperature topological transitions (Fabian Grusdt)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.02496">https://arxiv.org/pdf/2506.02496</a></span> Identification of gapless phases by squaring a twist operator *** (Akira Furusaki)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.02131">https://arxiv.org/pdf/2506.02131</a></span> Quantum correlation beyond entanglement: Holographic discord and multipartite generalizations</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.02108">https://arxiv.org/pdf/2506.02108</a></span> Anyon superconductivity and plateau transitions in doped fractional quantum anomalous Hall insulators **** (Pavel A. Nosov, Zhaoyu Han, Eslam Khalaf)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.02128">https://arxiv.org/pdf/2506.02128</a></span> Anyon delocalization transitions out of a disordered FQAH insulator **** (Zhengyan Darius Shi, T. Senthil)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2412.13327">https://arxiv.org/pdf/2412.13327</a></span> The SU(N) Fermi-Hubbard Model on two sites: Bethe Ansatz solution and Quantum Phase Transition of the Lipkin-Meshkov-Glick Model in the large-N limit</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2412.19803">https://arxiv.org/pdf/2412.19803</a></span> A local automaton for the 2D toric code (Ethan Lake)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2103.02626">https://arxiv.org/pdf/2103.02626</a></span> Coherent and dissipative dynamics at quantum phase transitions (Ettore Vicari)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03094">https://arxiv.org/pdf/2506.03094</a></span> Tour de gross: A modular quantum computer based on bivariate bicycle codes</p>
+<p class="p3"><br></p>
+<p class="p1">20250605</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03703">https://arxiv.org/pdf/2506.03703</a></span> Learning-at-Criticality in Large Language Models for Quantum Field Theory and Beyond</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04102">https://arxiv.org/pdf/2506.04102</a></span> Phase Transition of Topological Index driven by Dephasing *** (Cenke Xu)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03263">https://arxiv.org/pdf/2506.03263</a></span> Theory of Angle Resolved Photoemission Spectroscopy of Altermagnetic Mott Insulators (Michael Knap)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03266">https://arxiv.org/pdf/2506.03266</a></span> Fast offline decoding with local message-passing automata (Ethan Lake)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03866">https://arxiv.org/pdf/2506.03866</a></span> «Anticommuting» Z2 quantum spin liquids</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04221">https://arxiv.org/pdf/2506.04221</a></span> Topological Mixed States: Axiomatic Approaches and Phases of Matter ***** (Tai-Hsuan Yang, Bowen Shi, Jong Yeon Lee)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03247">https://arxiv.org/pdf/2506.03247</a></span> Tensor Renormalization Group Meets Computer Assistance</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04200">https://arxiv.org/pdf/2506.04200</a></span> Entanglement renormalization circuits for 2d Gaussian Fermion States (Andrew C. Potter)</p>
+<p class="p2"><a href="https://arxiv.org/pdf/2506.03261">https://arxiv.org/pdf/2506.03261</a><span class="s1"> Altermagnetic polarons</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03262">https://arxiv.org/pdf/2506.03262</a></span> Spin-glass state in nickelate superconductors (Steven A. Kivelson, Harold Hwang, Aharon Kapitulnik)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04181">https://arxiv.org/pdf/2506.04181</a></span> Exactly solvable spin liquids in Kitaev bilayers and moir ́e superlattices (Onur Erten)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04016">https://arxiv.org/pdf/2506.04016</a></span> Dreaming up scale invariance via inverse renormalization group</p>
+<p class="p3"><br></p>
+<p class="p1">20250606</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05244">https://arxiv.org/pdf/2506.05244</a></span> How to Train Your Dragon: Quantum Neural Networks (Alex Kamenev)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04335">https://arxiv.org/pdf/2506.04335</a></span> Emergent gravity and gravitational lensing in quantum materials (Liang Fu)</p>
+<p class="p2"><a href="https://arxiv.org/pdf/2506.04343">https://arxiv.org/pdf/2506.04343</a><span class="s1"> L´evy Sachdev-Ye-Kitaev Model</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04637">https://arxiv.org/pdf/2506.04637</a></span> Entanglement cost hierarchies in quantum fragmented mixed states</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04792">https://arxiv.org/pdf/2506.04792</a></span> Kondo effect under arbitrary spin-momentum locking</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05131">https://arxiv.org/pdf/2506.05131</a></span> DISCRETE QUANTUM SYSTEMS FROM TOPOLOGICAL FIELD THEORY</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04342">https://arxiv.org/pdf/2506.04342</a></span> The Luttinger Count is the Homotopy not the Physical Charge: Generalized Anomalies Characterize Non-Fermi Liquids (Philip W. Phillips)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05319">https://arxiv.org/pdf/2506.05319</a></span> Landau-Ginzburg Paradigm of Topological Phases (Yidun Wan)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05324">https://arxiv.org/pdf/2506.05324</a></span> A 2D-CFT Factory: Critical Lattice Models from Competing Anyon Condensation Processes in SymTO/SymTFTs</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05330">https://arxiv.org/pdf/2506.05330</a></span> Spinless and spinful charge excitations in moiré Fractional Chern Insulators (B. Andrei Bernevig, Nicolas Regnault)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04356">https://arxiv.org/pdf/2506.04356</a></span> Intra-unit-cell singlet pairing mediated by altermagnetic fluctuations *** (Yi-Ming Wu, Yuxuan Wang, Rafael M. Fernandes)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2309.04540">https://arxiv.org/pdf/2309.04540</a></span> Inhomogeneous Quantum Quenches of Conformal Field Theory with Boundaries (Shinsei Ryu)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
